# galactic-turtle

./: .gitignore  ChangeLog  configure.ac
src/: .gitignore  Makefile  Makefile.am  common.c  common.h  galacticd.c  galacticd.h  scoreboard.c  scoreboard.h
src/QRBG/: QRBG.cpp  QRBG.h  QRBG_wrapper.cpp  QRBG_wrapper.h
